--- a/order-service/.env
+++ b/order-service/.env
@@ -1,6 +1,8 @@
-JWT_SECRET=your_jwt_secret_key
 PORT=5001
-MONGODB_URI=mongodb+srv://hasinduonline:RUMU0ZWrquTkqikF@cluster0.ecidohi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-CART_SERVICE_URL=http://localhost:5003
-PAYMENT_SERVICE_URL=http://localhost:5002
-NODE_ENV=development 
+MONGODB_URI=mongodb://localhost:27017/order-service
+NODE_ENV=development
+BYPASS_AUTH=true
+JWT_SECRET=development-secret-key
+FRONTEND_URL=http://localhost:5173
+PAYMENT_SERVICE_URL=http://localhost:5003
+RESTAURANT_SERVICE_URL=http://localhost:5004
