--- a/payment-service/.env
+++ b/payment-service/.env
@@ -1,7 +1,9 @@
-JWT_SECRET=your_jwt_secret_key
-PORT=5002
-MONGODB_URI=mongodb+srv://hasinduonline:RUMU0ZWrquTkqikF@cluster0.ecidohi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-STRIPE_SECRET_KEY=your_stripe_secret_key
-STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
-ORDER_SERVICE_URL=http://localhost:5001
+PORT=5003
+MONGODB_URI=mongodb://localhost:27017/payment-service
 NODE_ENV=development
+BYPASS_AUTH=true
+JWT_SECRET=development-secret-key
+FRONTEND_URL=http://localhost:5173
+ORDER_SERVICE_URL=http://localhost:5001
+STRIPE_SECRET_KEY=sk_test_your_test_key
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
