--- a/cart-service/.env
+++ b/cart-service/.env
@@ -1,4 +1,6 @@
-JWT_SECRET=your_jwt_secret_key
 PORT=5003
-MONGODB_URI=mongodb+srv://hasinduonline:RUMU0ZWrquTkqikF@cluster0.ecidohi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-NODE_ENV=development 
+MONGODB_URI=mongodb://localhost:27017/cart-service
+NODE_ENV=development
+BYPASS_AUTH=true
+JWT_SECRET=development-secret-key
+FRONTEND_URL=http://localhost:5173
