--- a/payment-service/.env
+++ b/payment-service/.env
@@ -1,5 +1,6 @@
 PORT=5003
-MONGODB_URI=mongodb://localhost:27017/payment-service
+MONGODB_URI= mongodb+srv://hasinduonline:RUMU0ZWrquTkqikF@cluster0.ecidohi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
 NODE_ENV=development
 BYPASS_AUTH=true
 JWT_SECRET=development-secret-key
