--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint src/"
   },
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
