--- a/frontend/.env
+++ b/frontend/.env
@@ -3,4 +3,8 @@ VITE_CART_SERVICE_URL=http://localhost:5002
 VITE_ORDER_SERVICE_URL=http://localhost:5001
 VITE_PAYMENT_SERVICE_URL=http://localhost:5003
 VITE_RESTAURANT_SERVICE_URL=http://localhost:5005
-VITE_AUTH_SERVICE_URL=http://localhost:5004 
+VITE_AUTH_SERVICE_URL=http://localhost:5004
+
+# PayPal settings
+VITE_PAYPAL_CLIENT_ID=AclxCk5YoFzsUowotuyknlWBbJlHQksUFWE8-WxrU_oWkaxFp50412AvpgSsV1AWF-eKFwBV_QrZAgAN
+VITE_PAYPAL_ENABLE_MOCK=true
