--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,22 +10,42 @@ services:
     networks:
       - mademe_network
 
-  frontend:
-    build: ./frontend
+  rabbitmq:
+    image: rabbitmq:3-management
     ports:
-      - "5173:5173"
+      - "5672:5672"   # AMQP port
+      - "15672:15672" # Management UI
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
     environment:
-      - VITE_CART_SERVICE_URL=http://localhost:5002
-      - VITE_ORDER_SERVICE_URL=http://localhost:5001
-      - VITE_PAYMENT_SERVICE_URL=http://localhost:5003
-      - VITE_RESTAURANT_SERVICE_URL=http://localhost:5005
-      - VITE_USER_SERVICE_URL=http://localhost:5004
+      - RABBITMQ_DEFAULT_USER=mademe
+      - RABBITMQ_DEFAULT_PASS=mademe_password  # Change in production
+    networks:
+      - mademe_network
+
+  api-gateway:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./api-gateway/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - cart-service
       - order-service
       - payment-service
       - user-service
       - restaurant-service
+    networks:
+      - mademe_network
+
+  frontend:
+    build: ./frontend
+    ports:
+      - "5173:5173"
+    environment:
+      - VITE_API_GATEWAY_URL=http://localhost:80
+    depends_on:
+      - api-gateway
     networks:
       - mademe_network
 
@@ -37,8 +57,10 @@ services:
       - PORT=5002
       - MONGODB_URI=mongodb://mongodb:27017/cart-service
       - BYPASS_AUTH=true
+      - RABBITMQ_URL=amqp://mademe:mademe_password@rabbitmq:5672
     depends_on:
       - mongodb
+      - rabbitmq
     networks:
       - mademe_network
 
@@ -51,8 +73,10 @@ services:
       - MONGODB_URI=mongodb://mongodb:27017/order-service
       - PAYMENT_SERVICE_URL=http://payment-service:5003
       - RESTAURANT_SERVICE_URL=http://restaurant-service:5005
+      - RABBITMQ_URL=amqp://mademe:mademe_password@rabbitmq:5672
     depends_on:
       - mongodb
+      - rabbitmq
     networks:
       - mademe_network
 
@@ -64,9 +88,10 @@ services:
       - PORT=5003
       - MONGODB_URI=mongodb://mongodb:27017/payment-service
       - ORDER_SERVICE_URL=http://order-service:5001
+      - RABBITMQ_URL=amqp://mademe:mademe_password@rabbitmq:5672
     depends_on:
       - mongodb
-      - order-service
+      - rabbitmq
     networks:
       - mademe_network
 
@@ -80,8 +105,10 @@ services:
       - JWT_SECRET=your_jwt_secret_replace_in_production
       - JWT_EXPIRATION=24h
       - FRONTEND_URL=http://frontend:5173
+      - RABBITMQ_URL=amqp://mademe:mademe_password@rabbitmq:5672
     depends_on:
       - mongodb
+      - rabbitmq
     networks:
       - mademe_network
 
@@ -93,8 +120,10 @@ services:
       - PORT=5005
       - MONGODB_URI=mongodb://mongodb:27017/mademe-restaurants
       - JWT_SECRET=your_jwt_secret_replace_in_production
+      - RABBITMQ_URL=amqp://mademe:mademe_password@rabbitmq:5672
     depends_on:
       - mongodb
+      - rabbitmq
     networks:
       - mademe_network
 
@@ -104,3 +133,4 @@ networks:
 
 volumes:
   mongodb_data:
+  rabbitmq_data:
