--- a/notificationservicev1/.env
+++ b/notificationservicev1/.env
@@ -1,5 +1,6 @@
 
-MONGODB_URL=mongodb+srv://admin:admin@dsproject.khv4atg.mongodb.net/?retryWrites=true&w=majority&appName=dsproject
+# MONGODB_URL=mongodb+srv://admin:admin@dsproject.khv4atg.mongodb.net/?retryWrites=true&w=majority&appName=dsproject
+MONGODB_URL=mongodb+srv://ranjithgunasekara9:EYFNpq07MHDorXmP@mademe.eaikf23.mongodb.net/notification-service
 
 MONGO_HOST="dsproject.khv4atg.mongodb.net"
 MONGO_USER_NAME="admin"
