feat: Enhance Order Tracking UI and Logic
- Added helper functions to manage order status and step completion.
- Improved progress bar to visually represent order status with detailed steps.
- Implemented current step details for "PREPARING", "OUT_FOR_DELIVERY", and "DELIVERED" statuses.
- Updated CSS styles for the new progress bar and status history timeline.
- Added error handling for cancelled or rejected orders in the progress display.
- Introduced responsive styles for better mobile experience.

chore: Update payment service logs

- Added detailed logging for PayPal order creation and verification processes.
- Included error handling logs for payment processing.

chore: Initialize API Gateway

- Created Dockerfile and Nginx configuration for the API Gateway.

--- a/frontend/.env
+++ b/frontend/.env
@@ -4,6 +4,10 @@ VITE_ORDER_SERVICE_URL=http://localhost:5001
 VITE_PAYMENT_SERVICE_URL=http://localhost:5003
 VITE_RESTAURANT_SERVICE_URL=http://localhost:5005
 VITE_AUTH_SERVICE_URL=http://localhost:5004
+VITE_DELIVERY_SERVICE_URL=http://localhost/api/delivery
+VITE_NOTIFICATION_SERVICE_URL=http://localhost/api/notifications
+VITE_NOTIFICATION_WS_URL=ws://localhost/ws/notifications
+VITE_DRIVER_LOCATION_WS_URL=ws://localhost/ws/driver-locations
 
 # PayPal settings
 VITE_PAYPAL_CLIENT_ID=AclxCk5YoFzsUowotuyknlWBbJlHQksUFWE8-WxrU_oWkaxFp50412AvpgSsV1AWF-eKFwBV_QrZAgAN
